# gisele

./: Cargo.toml  README.md  control.pd  test.pd  test.vcv
src/: jackp.rs  main.rs  midi.rs  osc.rs  seq.rs
