[package]
name = "gisele"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jack = "0.11.3"
anyhow = "1.0.65"
rosc = "0.9.0"
wav = "1.0.0"
rand = "0.8.5"
parking_lot = "0.12.1"
rust-music-theory = "0.2"
strum = { version = "0.24.1", features = ["derive"] }
num-derive = "0.3.3"
num-traits = "0.2.15"